[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = "Jupyter Notebook for Machine Learning"
authors = ["newTypeGeek"]
license = "MIT"
readme = "README.md"
packages = [{include = "machine_learning"}]

[tool.poetry.dependencies]
python = "~3.10"
tensorflow = "~2.10.0"
pandas = "~1.5.0"
matplotlib = "~3.6.0"
seaborn = "~0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
